fix(token): use carbon spacing token instead

--- a/packages/styles/scss/patterns/sub-patterns/content-block/_content-block.scss
+++ b/packages/styles/scss/patterns/sub-patterns/content-block/_content-block.scss
@@ -80,7 +80,7 @@
     @include carbon--breakpoint('lg') {
       .#{$prefix}--link-list {
         padding-top: 0;
-        margin-right: -1rem;
+        margin-right: -$carbon--spacing-05;
       }
     }
   }
